--- a/config.sample.json
+++ b/config.sample.json
@@ -5,5 +5,5 @@
     "youtubers": [
         "https://www.youtube.com/c/Umi-%E7%99%BD%E6%98%9F%E5%84%AA%E7%B1%B3"
     ],
-    "youtubeKey": "your http://console.developer.google.com youtube v3 api key"
+    "youtubeKey": "AIzaSyCNxeY2RQ8UBkMTNG9pW9ruT9OFZp22ln0"
 }
